# jaims

./: LICENSE  README.md  setup.cfg
examples/: benchmarking_wrt_emcee_0.ipynb
jaims/: __init__.py  chain.py  helpers.py  jaims.py
jammer/: __init__.py  chain.py  helpers.py  jammer.py
tests/: test_chain.py  test_sampler.py
