[metadata]
name = jaims
version = 0.0.1
author = Utkarsh Giri
author_email = utkarshgiri@gmail.com
description = Library for jax based affine-invariant MCMC sampling
long_description = file: README.md
keywords = jax, MCMC, affine-invariant, goodman-weare, sampler
license = MIT License
url = https://github.com/utkarshgiri/jaims
project_urls =
    Bug Tracker = https://github.com/utkarshgiri/jaims/issues

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires = 
    jax>=0.2.9
    jaxlib
    numpy>=1.20.1
    tqdm
    joblib
    matplotlib>=3.4
    corner>=2.2
    emcee
